SQL database module updated

--- a/modules/sqldatabase/templates/repoupdate.tmpl
+++ b/modules/sqldatabase/templates/repoupdate.tmpl
@@ -1,17 +1,7 @@
 {{define "repoupdate"}}
-{{- $name := .Name }}fmt.Sprintf("UPDATE {{.Name | lowercase| plural}} SET 
+{{- $name := .Name }}"UPDATE {{.Name | lowercase| plural}} SET 
 {{- range $index, $element := .Fields}}{{if ne .Name "ID"}}{{if ne .Kind "Parent"}}
-{{- if gt $index 0}},{{end}} {{$element.Name | lowercase}}=
-{{- if eq $element.Kind "Integer"}}'%d'{{end}}
-{{- if eq $element.Kind "Text"}}'%s'{{end}}
-{{- if eq $element.Kind "Password"}}'%s'{{end}}
-{{- if eq $element.Kind "Number"}}'%e'{{end}}
-{{- if eq $element.Kind "Boolean"}}'%t'{{end}}
-{{- if eq $element.Kind "Email"}}'%s'{{end}}
-{{- if eq $element.Kind "Tel"}}'%s'{{end}}
-{{- if eq $element.Kind "Longtext"}}'%s'{{end}}
-{{- if eq $element.Kind "Lookup"}}'%d'{{end}}
-{{- if eq $element.Kind "Child"}}'%d'{{end}}
-{{- end}}{{end}}{{end}} WHERE id= '%d' " 
+{{- if gt $index 0}},{{end}} {{$element.Name | lowercase}}= ${{$index}}
+{{- end}}{{end}}{{end}} WHERE id= $1 " 
 {{- range .Fields}}{{if ne .Name "ID"}}{{if ne .Kind "Parent"}},{{$name | lowercase}}.{{.Name}}{{end}}{{end}}{{end}},{{$name | lowercase}}.ID)
 {{- end}}
