--- a/modules/model/templates/repository.tmpl
+++ b/modules/model/templates/repository.tmpl
@@ -11,22 +11,13 @@ import (
 // Env holds all interfaces describing the methods of the entity access structs.
 // Interfaces have to be implemented by concrete DB access functions 
 type Env struct {
-	{{- range .Entities }}
+{{- range .Entities }}
 	{{.Name | plural}} {{.Name}}Repository
-	{{- end}}	
+{{- end}}	
+{{- range $key, $value := .Lookups }}
+	{{title $key}} {{title $key}}Repository
+{{- end}}	
 }
-
-
-/* Handler are the standard handlers for CRUD applications
-type Handler interface{
-	Get(c echo.Context) error
-	List(c echo.Context) error
-	New(c echo.Context) error
-	Create(c echo.Context) error
-	Update(c echo.Context) error
-	Delete(c echo.Context) error
-}
-*/
 
 // Labels will be populated by the unique id and all fields tagged with isLabel=true
 type Labels map[uint64]string
@@ -46,5 +37,12 @@ type {{.Name}}Repository interface {
 	{{- end}}{{end}}
 }
 {{end}}
+
+{{- range $key, $value := .Lookups }}
+type {{title $key}}Repository interface {
+ 	Get(id uint64) (string, error)
+	GetAll() (Labels, error)  
+}
+{{- end}}	
 
 {{- end}}
