--- a/modules/view/server/server.tmpl
+++ b/modules/view/server/server.tmpl
@@ -5,7 +5,7 @@
 package view
 
 import (
-	model "{{.Config.Name}}/model"
+	model "{{.Name}}/model"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	"text/template"
