--- a/modules/view/templates/listtable.html
+++ b/modules/view/templates/listtable.html
@@ -10,7 +10,7 @@
                                       <tr>
                                         {{range .Fields -}}
                                           {{- if ne .Kind "Parent" }}
-                                          {{- if eq .Kind "Lookup" "Child"}}<th>{{.Object}}</th>
+                                          {{- if eq .Kind "Child"}}<th>{{.Object}}</th>
                                           {{- else if ne .Name "ID"}}<th>{{.Name}}</th>{{end}}
                                           {{- end}}
                                         {{end -}}
@@ -24,10 +24,10 @@
                                             {{range .Fields}}                                                                                          
                                               {{- if eq .Kind "Parent"}}{{end}}
                                               {{- if eq .Kind "Child"}}<td>{{"{{"}}.{{.Object}}{{"}}"}} </td>{{end}}
-                                              {{- if eq .Kind "Lookup"}}<td>{{"{{"}}.{{.Object}}{{"}}"}} </td>{{end}}                                              
+                                              {{- if eq .Kind "Lookup"}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}}                                              
                                               {{- if eq .Kind "Boolean"}}<td><span>{{"{{"}}if eq .{{.Name}} true{{"}}"}}<i class="far fa-check-square"></i>{{"{{"}}else{{"}}"}}<i class="far fa-square"></i>{{"{{"}}end{{"}}"}} </span> </td>{{end}}
-                                              {{- if eq .Kind "Tel" "Text" "Password" "Longtext" "Email"}}
-                                                {{- if eq .IsLabel true}}<td><a href="/{{$entityname | plural | lowercase}}/{{"{{.ID}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a> </td>
+                                              {{- if eq .Kind "Tel" "Text" "Password" "Longtext" "E-Mail" "Date" "Time"}}
+                                                {{- if eq .Label true}}<td><a href="/{{$entityname | plural | lowercase}}/{{"{{.ID}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a> </td>
                                                 {{- else}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}}{{end}}
                                               {{- if eq .Kind "Number"}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}}
                                               {{- if eq .Kind "Integer"}}{{- if ne .Name "ID"}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}} {{end}}                                        
